2009-01-21  Bastien Nocera  <hadess@hadess.net>

	* src/totem.c: Fix retval

2009-01-20  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/plugins/coherence_upnp/Makefile.am:
	* src/plugins/coherence_upnp/coherence_upnp.py:
	* src/plugins/coherence_upnp/coherence_upnp.totem-plugin.in:
	Add Coherence UPNP plugin from Frank Scholz

2009-01-18  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c (on_recent_file_item_activated):
	Don't add the recent file to the recent files list
	*again*
	* src/totem-object.c (totem_add_to_playlist_and_play):
	Don't try to play past the last item in the playlist,
	so that clicking on a menu item doesn't play the
	current file again, but the one we just added

2009-01-16  Bastien Nocera  <hadess@hadess.net>

	* data/totem.ui: Move burn menu item above the properties

2009-01-16  Bastien Nocera  <hadess@hadess.net>

	Patch from Philippe Rouquier <bonfire-app@wanadoo.fr> and
	Luis Medinas <lmedinas@gnome.org> to add a Brasero plugin

	* configure.in:
	* data/totem.ui: Add placeholders for Burn items
	* src/plugins/brasero-disc-recorder/*:
	Add Brasero plugin to allow creating VCDs from playing video
	files, and duplicate VCDs and DVDs (Closes: #565383)

2009-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/properties/bacon-video-widget-properties.c
	(bacon_video_widget_properties_from_metadata): Fix artist
	title mixup, spotted by Sebastian Keller (Closes: #567580)

2009-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/plugins/lirc/totem-lirc.c (totem_lirc_to_setting),
	(totem_lirc_read_code):
	* src/plugins/lirc/totem_lirc_default: Patch from
	Vidar Braut Haarr <vhaarr+bgo@gmail.com> to support
	repeat and shuffle through LIRC (Closes: #567258)

2009-01-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c
	(bacon_video_widget_set_video_property):
	* src/backend/bacon-video-widget-xine.c
	(bacon_video_widget_set_video_property): Patch from